# gmailnator-server

./: .gitignore  Cargo.toml  README.md
src/: mail.rs  main.rs
