[package]
name = "gmailnator-server"
version = "0.1.0"
authors = ["Y0GAAAA <35837405+Y0GAAAA@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmailnator = "0.2.0"
rocket = "0.4.6"
configparser = "1.0.0"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]